--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.20)
-project(SpectreLink DESCRIPTION "SpectreLink" VERSION 0.1.0 LANGUAGES C)
+project(SpectreLink DESCRIPTION "SpectreLink" VERSION 1.0 LANGUAGES C)
 
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_C_STANDARD_REQUIRED OFF)
@@ -38,5 +38,5 @@ if (WIN32)
 endif()
 
 if ("${CMAKE_BUILD_TYPE}" STREQUAL "Debug")
-    target_compile_definitions(${PROJECT_NAME} PRIVATE -DDEBUG)
+    add_definitions(-DDEBUG)
 endif()
